--- a/frontend/src/styles/RestaurantPage.css
+++ b/frontend/src/styles/RestaurantPage.css
@@ -175,15 +175,22 @@
 }
 
 .filter-modal-content {
-  background-color: white;
-  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.856);
+  color: black;
+  padding: 10px;
   border-radius: 10px;
   width: 300px;
   text-align: center;
 }
 
 .filter-modal-content h3 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.filter-modal-content label {
+  text-align: left;
+  color: black;
 }
 
 .filter-modal-content select, .filter-modal-content button {
